fix scrollbar and vw

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -30,9 +30,20 @@
     font-family: "Lato", sans-serif;
 }
 
-/* body {
-    max-width: 100vw;
-} */
+body,
+html {
+    overflow-x: hidden;
+    overflow-y: scroll;
+    scrollbar-width: none;
+}
+
+body::-webkit-scrollbar {
+    display: none;
+}
+
+#app {
+    width: 100vw;
+}
 
 :root {
     --primary: #EC6C5B;
